--- a/Estilos/_blog.scss
+++ b/Estilos/_blog.scss
@@ -8,6 +8,10 @@
     .articulos {
         @include box-grid(2rem, 0);
         grid-template-columns: repeat(3, 1fr);
+        @include tabletpro {
+            display: grid;
+            grid-template-columns: repeat(1, 2fr);
+        }
 
 
         .posts {
@@ -15,6 +19,10 @@
             box-shadow: 0 1px 6px 1px rgba(0, 0, 0, .1);
             overflow: hidden;
             transition: .2s;
+            @include tabletpro {
+                display: grid;
+                grid-template-columns: 1fr 2fr;
+            }
             &:hover {
                 transform: translateY(-4px);
                 box-shadow: 0 1px 14px 2px rgba(0, 0, 0, .15);
