--- a/Estilos/_header.scss
+++ b/Estilos/_header.scss
@@ -1,30 +1,87 @@
-.header {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    background-color: #030708;
-    height: auto;
-    padding: 0 4.8rem;
+li{
+    list-style: none;
+}
 
-    .logo{
-        height: 7.4rem;
+a{
+    text-decoration: none;
+    color: $dark-grey;
+    font-size: 2rem;
+}
+
+a:hover {
+    color: $dark-red;
+}
+
+header {
+    background-color: #030708;
+    position: relative;
+    padding: 0 2rem;
+    height: 10rem;
     }
-    .main-nav-list{
-        list-style: none;
-        display: flex;
-        gap: 3.2rem;
-        
-        .link-nav:link,
-        .link-nav:visited {
-        text-decoration: none;
-        color:$Light-Bluewhite;
-        font-weight: 500;
-        font-size: 1.8rem;
-        transition: all 0.3s;
-        }
-        .link-nav:hover,
-        .link-nav:active {
-        color: $dark-red ;
-        }
-    }    
+
+.navbar_ {
+    @include box-ppties;
+    margin: 0 auto;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    
+}
+
+.navbar_ .logo img  {
+    width: 200px;
+}
+
+.navbar_ .main-nav-list {
+    display: flex;
+    gap: 2rem;
+
+    @include tabletpro {
+        display: none;
+    }
+}
+
+.navbar_ .menu-Btn {
+    cursor: pointer;
+    display: none;
+    color: #fff;
+    font-size: 2rem;
+
+    @include tabletpro {
+        display: block;
+    }
+}
+/*DropDown Menu*/
+.dropdown_menu {
+    display: none;
+    position: absolute;
+    right: 2rem;
+    top: 60px;
+    width: 300px;
+    height: 0;
+    background: rgba(255, 255, 255, 0.1);
+    backdrop-filter: blur(15px);
+    border-radius: 10px;
+    overflow: hidden;
+    transition: height 0.2s cubic-bezier(0.175, 0.885, 0.32, 1.275);
+
+    @include tabletpro {
+        display: block;
+    }
+
+    @include mobile {
+        left: 2rem;
+        width: unset;
+    }
+}
+.dropdown_menu.open {
+    height: 240px;;
+}
+
+
+.dropdown_menu li {
+    padding: 0.7rem;
+    display: flex;
+    align-items: center;
+    justify-content: center;
 }
