--- a/Estilos/_inicio.scss
+++ b/Estilos/_inicio.scss
@@ -9,7 +9,7 @@
     background-color: $Dark-Blue; /* Fallback Color*/
 .sec-incio{
 
-    padding: 4.8rem 0 9.6rem 0;
+    padding: 9.6rem 0 9.6rem 0;
 
     .montero{
         @include box-ppties;
@@ -35,6 +35,9 @@
                 line-height: 1.6;
                 margin-bottom: 4.8rem;
                 color: $Light-Bluewhite ;
+                @include tabletpro {
+                    padding: 0 3rem;
+                }
             }
 
             .btn-inicio, .btn-inicio:link, .btn-inicio:active {
@@ -73,16 +76,20 @@
         text-align: center  
         }
         .galeria {
-    @include box-grid (1rem, center);
-    @include box-ppties;
-    grid-template-columns: repeat(3, 1fr);
-    padding-bottom: 4.8rem;
+        @include box-ppties;
+        display: flex;
+        align-items: center;
+        justify-content: space-around;
+        padding-bottom: 4.8rem;
+            @include tabletpro {
+                padding-right: 2rem;
+            }
             .car-logo {
                 
                 .renault {
-                    width: 70%;
+                    width: 200px;
                 }
-            }
+            }   
         }
     }
 }
