--- a/Estilos/_portafolio.scss
+++ b/Estilos/_portafolio.scss
@@ -20,12 +20,19 @@
         grid-template-columns: repeat(2, 1fr);
         place-items: center;
         padding-bottom: 2.2rem;
+        @include tabletpro {
+            display: flex;
+            flex-direction: column;
+        }
         
         .porta-prrf{
             color: $light-gray;
             font-size: 3rem;
             font-size: 2.4rem;
             text-align: center;
+            @include tabletpro {
+                padding: 2rem 2rem;
+            }
         }
         .slider {
             position: relative;
