--- a/Estilos/_header.scss
+++ b/Estilos/_header.scss
@@ -44,7 +44,7 @@ header {
 .navbar_ .menu-Btn {
     cursor: pointer;
     display: none;
-    color: #fff;
+    color: $dark-grey;
     font-size: 2rem;
 
     @include tabletpro {
@@ -59,8 +59,8 @@ header {
     top: 60px;
     width: 300px;
     height: 0;
-    background: rgba(255, 255, 255, 0.1);
-    backdrop-filter: blur(15px);
+    background: rgba(148, 20, 20, 0.7);
+    backdrop-filter: blur(5px);
     border-radius: 10px;
     overflow: hidden;
     transition: height 0.2s cubic-bezier(0.175, 0.885, 0.32, 1.275);
@@ -75,10 +75,14 @@ header {
     }
 }
 .dropdown_menu.open {
-    height: 240px;;
+    height: 400px;;
 }
 
-
+.dropdown_menu .link-nav {
+    color: $white;
+    font-size: 2.2rem;
+    padding: 1rem;
+}
 .dropdown_menu li {
     padding: 0.7rem;
     display: flex;
