--- a/Estilos/_medias-queries.scss
+++ b/Estilos/_medias-queries.scss
@@ -4,6 +4,12 @@
     }
 }
 
+@mixin tabletsmall {
+    @media screen and (max-width: 700px) {
+        @content;
+    }
+}
+
 @mixin mobile {
     @media screen and (max-width: 576px) {
         @content;
