--- a/Estilos/_nosotros.scss
+++ b/Estilos/_nosotros.scss
@@ -21,7 +21,20 @@
     .nos-servicios{
         @include box-grid(9.6rem, 0);
         grid-template-columns: repeat(3, 1fr);
+        @include tabletsmall{
+        display: flex;
+        flex-direction: column;
+        gap: 2rem;
+        
 
+        .post_uno {
+            @include tabletsmall {
+                box-shadow: 0 1px 6px 1px rgba(0, 0, 0, .3);
+                padding: 1rem 2rem;
+            }
+        }
+        
+        }
         .serv-icon {
             display: block;
             margin: auto;
