--- a/Estilos/_tienda.scss
+++ b/Estilos/_tienda.scss
@@ -13,13 +13,16 @@
         flex-direction: column;
         justify-content: space-between;
 
-        .ttl{
+            .ttl{
             font-weight: 400;
             font-size: 1.3rem;
             text-transform: uppercase;
             text-align: center;
             font-size: 3rem;
             margin-top: 1rem;
+            @include mobile {
+                position: unset;
+            }
         }
         .categoria{
             display: flex;
@@ -90,6 +93,13 @@
             @include box-grid(1rem, 0);
             grid-template-columns: repeat(3, 1fr);
             /* grid-template-rows: 1fr 1fr; */
+            @include tabletpro {
+                grid-template-columns: repeat(2, 1fr);
+            @include mobile {
+                grid-template-columns: repeat(1, 1fr);
+            }
+
+            }
             .img-pdt{
                 max-width: 100%;
                 border-radius: 1rem;
@@ -105,6 +115,12 @@
                 display: flex;
                 flex-direction: column;
                 gap: .75rem;
+                    @include tabletpro {
+                        gap: 1rem;
+                        position:unset;
+                        margin-top: 0;
+                        
+                    }
                 .agg-pdt{
                     border: 0;
                     background-color: $dark-grey;
