--- a/Estilos/_blog.scss
+++ b/Estilos/_blog.scss
@@ -1,3 +1,13 @@
+#blog {
+    background-color:  $light-gray;
+}
+.ttl_blog {
+    @include box-ppties;
+    padding: 3rem 0rem 0rem 1.5rem;
+    font-size: 3rem;
+    color: $dark-red;
+    
+}
 .blog {
     background-color: $light-gray;
     display: flex;
@@ -93,10 +103,9 @@
                 width: 100%;
                 height: 20rem;
                 transition: .2s;
-                @include tabletpro {
-                    object-fit: cover;
-                    object-position: center center ;
-                }
+                object-fit: cover;
+                object-position: center center;
+            
             }
         }        
     }
