--- a/Estilos/_header.scss
+++ b/Estilos/_header.scss
@@ -21,10 +21,12 @@ header {
 
 .navbar_ {
     @include box-ppties;
+    height: 60px;
     margin: 0 auto;
     display: flex;
     align-items: center;
     justify-content: space-between;
+   
     
 }
 
@@ -67,6 +69,7 @@ header {
 
     @include tabletpro {
         display: block;
+
     }
 
     @include mobile {
@@ -75,13 +78,15 @@ header {
     }
 }
 .dropdown_menu.open {
-    height: 400px;;
+    height: 300px;;
+   
 }
 
 .dropdown_menu .link-nav {
     color: $white;
-    font-size: 2.2rem;
-    padding: 1rem;
+    font-size: 1.2rem;
+    padding: 0.7rem;
+    text-align: left;
 }
 .dropdown_menu li {
     padding: 0.7rem;
