--- a/Estilos/_nosotros.scss
+++ b/Estilos/_nosotros.scss
@@ -1,13 +1,31 @@
 .sec-nosotros{
     background-color: $light-gray;
     padding: 3rem 0 3rem 0;
-    position: relative;
+    
+    
+    @include tabletpro {
+        
+     }
+
+    .nosotros_header{
+        
+   
+    .img_encabezado {
+        display: block;
+        margin: auto;
+        width: 100%;
+        margin-top: -1rem;
+        @include tabletpro {
+            width: 90%;
+        }
+    }
+}
 
     .nos-his-ttl{   
-        color: $dark-red;
+        color: $dark-red;   
         font-size: 4.0rem;
         text-align: center;
-        padding: 1.6rem 3.2rem;
+        padding: 4.6rem 3.2rem;
         margin-bottom: 1.2rem;
         font-weight: 500;
     }
@@ -44,12 +62,12 @@
             text-align: center;
             margin-bottom: 1.2rem;
             color: $dark-red;
-            font-size: 1.6rem;
+            font-size: 2.0rem;
             font-weight: 500;
         }
         
         .serv-prf {
-            text-align: justify;
+            text-align: center;
             font-size: 1.4rem ;
             line-height: 1.2;
             color:$Dark-Blue
