--- a/Estilos/_portafolio.scss
+++ b/Estilos/_portafolio.scss
@@ -2,7 +2,7 @@
     background-image: linear-gradient(
     rgba(0,0,0,0.7),
     rgba(0,0,0,0.7)), 
-    url(/Imagenes/Seccion-Inicio/Motor.jpg);
+    url(../Imagenes/Seccion-Inicio/Motor.jpg);
     background-color: $Dark-Blue;
     background-repeat: no-repeat;
     background-size: cover;
