--- a/Estilos/estilos.css
+++ b/Estilos/estilos.css
@@ -356,7 +356,7 @@ header {
 }
 
 .portafolio {
-  background-image: linear-gradient(rgba(0, 0, 0, 0.7), rgba(0, 0, 0, 0.7)), url(/Imagenes/Seccion-Inicio/Motor.jpg);
+  background-image: linear-gradient(rgba(0, 0, 0, 0.7), rgba(0, 0, 0, 0.7)), url(../Imagenes/Seccion-Inicio/Motor.jpg);
   background-color: #2b2d42;
   background-repeat: no-repeat;
   background-size: cover;
