--- a/Estilos/_blog.scss
+++ b/Estilos/_blog.scss
@@ -38,6 +38,17 @@
                 display: grid;
                 grid-template-columns: 1fr 2fr;
                 overflow: unset;
+                @include mobile {
+                    grid: "uno" 1fr
+                          "dos" 1fr;
+                        .post-header {
+                            grid-area: uno;
+                        }
+                        .post-body {
+                            grid-area: dos;
+                        }
+                }
+
             }
             &:hover {
                 transform: translateY(-4px);
@@ -52,9 +63,16 @@
             
             .post-header {
                 width: 100%;
-                height: 20rem;
+                height: 50vh;
                 overflow: hidden;
                 cursor: pointer;
+                .img-post { 
+                    width: 100%;
+                    height: 50vh;
+                    transition: .2s;
+                    object-fit: cover;
+               
+                }
             }
             }
             .post-body {
@@ -99,13 +117,6 @@
                     transform: translateY(-2px);
                 }
             }
-            .img-post {
-                width: 100%;
-                height: 20rem;
-                transition: .2s;
-                object-fit: cover;
-                object-position: center center;
-            
-            }
+
         }        
     }
