--- a/Estilos/estilos.css
+++ b/Estilos/estilos.css
@@ -296,7 +296,7 @@ header {
   display: block;
   margin: auto;
   width: 100%;
-  margin-top: -1rem;
+  margin-top: -3rem;
 }
 @media screen and (max-width: 950px) {
   .sec-nosotros .nosotros_header .img_encabezado {
@@ -426,7 +426,8 @@ header {
   max-width: 130rem;
   padding: 0 3.2rem;
   margin: 0 auto;
-  padding: 3rem 0rem 0rem 1.5rem;
+  text-align: center;
+  padding: 4rem 0rem 2rem 0rem;
   font-size: 3rem;
   color: #9d0002;
 }
